--- a/hry.html
+++ b/hry.html
@@ -6,316 +6,497 @@
     <title>Hry</title>
     
     <style>
-.modal-content {
-    background: rgba(20,20,30,0.95);
-    backdrop-filter: blur(20px);
-    border-radius: 20px;
-    padding: 40px;
-    width: 420px;
-    border: 1px solid rgba(255,8,68,.4);
-    box-shadow: 0 30px 80px rgba(0,0,0,.8);
-}
+    #adminPanel {
+        display: none;
+        position: fixed;
+        top: 120px;
+        right: 30px;
+        width: 350px;
+        background: linear-gradient(135deg, rgba(40,20,0,0.98) 0%, rgba(20,10,0,0.99) 100%);
+        border: 3px solid rgba(255,150,0,0.8);
+        clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
+        padding: 20px;
+        z-index: 999;
+        box-shadow: 0 0 40px rgba(255,150,0,0.6);
+        max-height: calc(100vh - 140px);
+        overflow-y: auto;
+    }
 
-.modal-content h3 {
-    font-family: 'Orbitron', sans-serif;
-    letter-spacing: 3px;
-    margin-bottom: 25px;
-    background: linear-gradient(135deg,#fff,var(--primary-red));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
+    #adminPanel h3 {
+        color: #ff9900;
+        font-size: 20px;
+        font-weight: 900;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        text-shadow: 0 0 15px rgba(255,150,0,0.9);
+        margin-bottom: 15px;
+        text-align: center;
+    }
 
-.modal-content input {
-    width: 100%;
-    padding: 14px 18px;
-    margin-bottom: 12px;
-    background: rgba(255,255,255,0.06);
-    border: 1px solid rgba(255,255,255,.2);
-    border-radius: 12px;
-    color: #fff;
-    font-weight: 600;
-}
+    .admin-game-toggle {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 12px;
+        margin: 8px 0;
+        background: rgba(0,0,0,0.6);
+        border: 2px solid rgba(255,150,0,0.5);
+        clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
+    }
 
-.modal-content input:focus {
-    outline: none;
-    border-color: var(--primary-red);
-    box-shadow: 0 0 15px rgba(255,8,68,.4);
-}
+    .admin-game-toggle span {
+        color: #fff;
+        font-weight: 900;
+        font-size: 14px;
+    }
 
-.modal-buttons {
-    display: flex;
-    gap: 12px;
-    margin-top: 20px;
-}
+    .admin-toggle-btn {
+        padding: 8px 16px;
+        border: 2px solid rgba(200,0,0,0.7);
+        background: linear-gradient(135deg, rgba(200,0,0,0.9) 0%, rgba(100,0,0,0.95) 100%);
+        color: #fff;
+        font-weight: 900;
+        font-size: 12px;
+        letter-spacing: 1px;
+        text-transform: uppercase;
+        cursor: pointer;
+        transition: all 0.3s ease;
+        clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+        min-width: 110px;
+    }
 
-.modal-btn {
-    flex: 1;
-    padding: 14px;
-    border-radius: 12px;
-    border: 1px solid rgba(255,8,68,.6);
-    background: rgba(255,8,68,.25);
-    color: #fff;
-    font-weight: 700;
-    cursor: pointer;
-}
+    .admin-toggle-btn:hover {
+        background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
+        transform: translateY(-2px);
+    }
 
-.modal-btn.cancel {
-    background: rgba(255,255,255,.06);
-    border-color: rgba(255,255,255,.2);
-}
+    .admin-toggle-btn.active {
+        background: linear-gradient(135deg, rgba(0,200,0,0.9) 0%, rgba(0,100,0,0.95) 100%);
+        border-color: rgba(0,200,0,0.7);
+    }
 
-    :root {
-    --primary-red: #ff0844;
-    --secondary-red: #c20033;
-    --dark-bg: #0a0a0f;
-    --glass-bg: rgba(20, 20, 30, 0.65);
-    --glass-border: rgba(255, 255, 255, 0.12);
-    --accent-cyan: #00d9ff;
-    --accent-purple: #b042ff;
-}
+    #gamesContainer {
+        max-width: 1400px;
+        margin: 0 auto;
+        padding: 0 40px 80px;
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+        gap: 35px;
+        position: relative;
+        z-index: 2;
+    }
 
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+    .game-card {
+        position: relative;
+        background: linear-gradient(135deg, rgba(30,30,30,0.95) 0%, rgba(15,15,15,0.98) 100%);
+        border: 2px solid rgba(200,0,0,0.4);
+        clip-path: polygon(0 0, 95% 0, 100% 10%, 100% 100%, 5% 100%, 0 90%);
+        transition: all 0.4s ease;
+        cursor: pointer;
+        overflow: hidden;
+        box-shadow: 0 5px 20px rgba(0,0,0,0.8), 0 0 20px rgba(200,0,0,0.2);
+    }
 
-body {
-    font-family: 'Rajdhani', sans-serif;
-    min-height: 100vh;
-    background: var(--dark-bg);
-    color: #fff;
-    overflow-x: hidden;
-}
+    .game-card:hover {
+        transform: translateY(-10px) scale(1.02);
+        border-color: rgba(255,30,30,0.8);
+        box-shadow: 0 15px 40px rgba(0,0,0,0.9), 0 0 40px rgba(255,0,0,0.6);
+    }
 
-/* BACKGROUND OVERLAY */
-body::before {
-    content: "";
-    position: fixed;
-    inset: 0;
-    background:
-        radial-gradient(ellipse at top, rgba(255, 8, 68, 0.15), transparent 60%),
-        radial-gradient(ellipse at bottom, rgba(0, 217, 255, 0.12), transparent 60%),
-        linear-gradient(180deg, rgba(10,10,15,0.85), rgba(10,10,15,0.95));
-    z-index: -1;
-}
+    .game-card.disabled {
+        opacity: 0.5;
+        pointer-events: none;
+        filter: grayscale(1);
+    }
 
-/* BACK BUTTON */
-#backBtn {
-    position: fixed;
-    top: 30px;
-    left: 30px;
-    padding: 14px 34px;
-    background: var(--glass-bg);
-    backdrop-filter: blur(12px);
-    border: 1px solid var(--glass-border);
-    border-radius: 14px;
-    color: #fff;
-    font-family: 'Orbitron', sans-serif;
-    font-weight: 700;
-    letter-spacing: 2px;
-    cursor: pointer;
-    transition: all .3s ease;
-    z-index: 100;
-}
+    .game-card.disabled::after {
+        content: "⚠️ MIMO PROVOZ";
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        background: rgba(200,0,0,0.95);
+        color: #fff;
+        padding: 15px 30px;
+        font-weight: 900;
+        font-size: 18px;
+        letter-spacing: 2px;
+        text-shadow: 0 0 15px rgba(255,0,0,0.9);
+        border: 3px solid rgba(255,0,0,0.8);
+        clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+        z-index: 10;
+    }
 
-#backBtn:hover {
-    transform: translateY(-4px);
-    border-color: var(--primary-red);
-    box-shadow: 0 15px 40px rgba(255, 8, 68, 0.4);
-}
+    .game-image-container {
+        position: relative;
+        width: 100%;
+        height: 200px;
+        overflow: hidden;
+        background: #000;
+    }
 
-/* AUTH */
-#authButtons {
-    position: fixed;
-    top: 30px;
-    right: 30px;
-    display: flex;
-    gap: 12px;
-    z-index: 100;
-}
+    .game-image {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        transition: transform 0.4s ease;
+        filter: brightness(0.7) contrast(1.2);
+    }
 
-#onlineCounter {
-    padding: 10px 18px;
-    background: rgba(0,217,255,0.12);
-    border: 1px solid rgba(0,217,255,0.35);
-    border-radius: 12px;
-    color: var(--accent-cyan);
-    font-weight: 700;
-    box-shadow: 0 0 20px rgba(0,217,255,.25);
-}
+    .game-card:hover .game-image {
+        transform: scale(1.1);
+        filter: brightness(0.9) contrast(1.3);
+    }
 
-#authButtons button {
-    padding: 12px 26px;
-    background: var(--glass-bg);
-    backdrop-filter: blur(10px);
-    border: 1px solid var(--glass-border);
-    border-radius: 12px;
-    color: #fff;
-    font-weight: 700;
-    letter-spacing: 1px;
-    cursor: pointer;
-    transition: all .3s ease;
-}
+    .game-content {
+        padding: 25px;
+    }
 
-#authButtons button:hover {
-    background: rgba(255,8,68,0.2);
-    border-color: var(--primary-red);
-    transform: translateY(-2px);
-    box-shadow: 0 10px 25px rgba(255,8,68,.35);
-}
+    .game-title {
+        color: #fff;
+        font-size: 22px;
+        font-weight: 900;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        margin-bottom: 12px;
+        text-shadow: 0 0 12px rgba(255,0,0,0.8);
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
 
-/* TITLE */
-h1 {
-    text-align: center;
-    font-family: 'Orbitron', sans-serif;
-    font-size: clamp(2.8rem, 6vw, 4rem);
-    margin: 90px 0 60px;
-    letter-spacing: 6px;
-    text-transform: uppercase;
-    background: linear-gradient(135deg,#fff,var(--accent-cyan),var(--primary-red));
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
-    filter: drop-shadow(0 0 25px rgba(255,8,68,.5));
-}
+    .game-icon {
+        font-size: 28px;
+    }
 
-/* ADMIN PANEL */
-#adminPanel {
-    display: none;
-    position: fixed;
-    top: 120px;
-    right: 30px;
-    width: 360px;
-    background: var(--glass-bg);
-    backdrop-filter: blur(18px);
-    border: 1px solid rgba(255,8,68,.4);
-    border-radius: 20px;
-    padding: 22px;
-    z-index: 999;
-    box-shadow: 0 25px 70px rgba(0,0,0,.8);
-}
+    .play-btn {
+        width: 100%;
+        padding: 14px;
+        border: 2px solid rgba(200,0,0,0.6);
+        background: linear-gradient(135deg, rgba(200,0,0,0.8) 0%, rgba(100,0,0,0.9) 100%);
+        color: #fff;
+        font-weight: 900;
+        font-size: 16px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        cursor: pointer;
+        box-shadow: 0 0 15px rgba(200,0,0,0.4);
+        transition: all 0.3s ease;
+        text-shadow: 0 0 10px rgba(255,0,0,0.8);
+        clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
+        margin-top: 15px;
+    }
 
-#adminPanel h3 {
-    font-family: 'Orbitron', sans-serif;
-    text-align: center;
-    letter-spacing: 3px;
-    color: var(--accent-purple);
-    margin-bottom: 18px;
-}
+    .play-btn:hover {
+        background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
+        transform: translateY(-2px);
+    }
 
-.admin-game-toggle {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 12px;
-    margin-bottom: 10px;
-    background: rgba(255,255,255,0.05);
-    border-radius: 12px;
-}
+    .game-image-placeholder {
+        width: 100%;
+        height: 100%;
+        background: linear-gradient(135deg, rgba(100,0,0,0.3) 0%, rgba(50,0,0,0.5) 100%);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 48px;
+    }
 
-.admin-toggle-btn {
-    padding: 8px 16px;
-    border-radius: 10px;
-    border: 1px solid rgba(255,8,68,.6);
-    background: rgba(255,8,68,.25);
-    color: #fff;
-    cursor: pointer;
-    transition: .3s;
-}
+    /* Modal styly */
+    .modal {
+        display: none;
+        position: fixed;
+        inset: 0;
+        background: rgba(0, 0, 0, 0.85);
+        backdrop-filter: blur(5px);
+        justify-content: center;
+        align-items: center;
+        z-index: 1000;
+    }
 
-.admin-toggle-btn.active {
-    background: rgba(0,217,255,.3);
-    border-color: var(--accent-cyan);
-}
+    .modal-content {
+        background: linear-gradient(135deg, rgba(30,30,30,0.98) 0%, rgba(15,15,15,0.99) 100%);
+        padding: 40px;
+        border: 3px solid rgba(200,0,0,0.7);
+        width: 420px;
+        text-align: center;
+        box-shadow: 0 0 50px rgba(255,0,0,0.7);
+        clip-path: polygon(3% 0, 100% 0, 97% 100%, 0 100%);
+    }
 
-/* GAMES GRID */
-#gamesContainer {
-    max-width: 1400px;
-    margin: auto;
-    padding: 0 40px 100px;
-    display: grid;
-    grid-template-columns: repeat(auto-fit,minmax(280px,1fr));
-    gap: 40px;
-}
+    .modal-content h3 {
+        color: #fff;
+        font-size: 28px;
+        font-weight: 900;
+        letter-spacing: 3px;
+        text-transform: uppercase;
+        text-shadow: 0 0 20px rgba(255,0,0,0.9);
+        margin-bottom: 20px;
+    }
 
-/* GAME CARD */
-.game-card {
-    background: var(--glass-bg);
-    backdrop-filter: blur(20px);
-    border-radius: 24px;
-    border: 1px solid var(--glass-border);
-    overflow: hidden;
-    transition: all .4s cubic-bezier(.23,1,.32,1);
-}
+    .modal-content input {
+        width: 100%;
+        padding: 15px 20px;
+        margin: 10px 0;
+        border: 2px solid rgba(200,0,0,0.5);
+        background: rgba(0,0,0,0.6);
+        color: #fff;
+        font-size: 16px;
+        font-weight: bold;
+        clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
+    }
 
-.game-card:hover {
-    transform: translateY(-12px) scale(1.02);
-    border-color: var(--primary-red);
-    box-shadow: 0 30px 80px rgba(255,8,68,.45);
-}
+    .modal-content input:focus {
+        outline: none;
+        border-color: rgba(255,30,30,0.9);
+        box-shadow: 0 0 25px rgba(255,0,0,0.6);
+    }
 
-.game-card.disabled {
-    opacity: .45;
-    filter: grayscale(1);
-    pointer-events: none;
-}
+    .modal-buttons {
+        display: flex;
+        gap: 15px;
+        margin-top: 20px;
+    }
 
-.game-image-container {
-    height: 200px;
-    overflow: hidden;
-}
+    .modal-btn {
+        flex: 1;
+        padding: 15px;
+        border: 2px solid rgba(200,0,0,0.7);
+        background: linear-gradient(135deg, rgba(200,0,0,0.9) 0%, rgba(100,0,0,0.95) 100%);
+        color: #fff;
+        font-weight: 900;
+        font-size: 16px;
+        letter-spacing: 2px;
+        text-transform: uppercase;
+        cursor: pointer;
+        text-shadow: 0 0 12px rgba(255,0,0,0.9);
+        clip-path: polygon(5% 0, 100% 0, 95% 100%, 0 100%);
+        transition: all 0.3s ease;
+    }
 
-.game-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    filter: brightness(.7);
-    transition: transform .4s ease;
-}
+    .modal-btn:hover {
+        background: linear-gradient(135deg, rgba(255,20,20,1) 0%, rgba(150,0,0,1) 100%);
+        transform: translateY(-3px);
+    }
 
-.game-card:hover .game-image {
-    transform: scale(1.1);
-    filter: brightness(.9);
-}
+    .modal-btn.cancel {
+        background: linear-gradient(135deg, rgba(60,60,60,0.9) 0%, rgba(30,30,30,0.95) 100%);
+    }
 
-.game-content {
-    padding: 26px;
-}
+    /* Chat panel */
+    #chatPanel {
+        display: none;
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        width: 400px;
+        height: 500px;
+        background: linear-gradient(135deg, rgba(20,20,20,0.98) 0%, rgba(10,10,10,0.99) 100%);
+        border: 3px solid rgba(200,0,0,0.7);
+        clip-path: polygon(2% 0, 100% 0, 98% 100%, 0 100%);
+        z-index: 999;
+        flex-direction: column;
+    }
 
-.game-title {
-    font-family: 'Orbitron', sans-serif;
-    letter-spacing: 2px;
-    font-size: 1.4rem;
-    margin-bottom: 12px;
-}
+    #chatHeader {
+        padding: 15px;
+        background: rgba(200,0,0,0.3);
+        border-bottom: 2px solid rgba(200,0,0,0.7);
+        display: flex;
+        justify-content: space-between;
+    }
 
-.play-btn {
-    width: 100%;
-    padding: 14px;
-    border-radius: 14px;
-    border: 1px solid rgba(255,8,68,.6);
-    background: rgba(255,8,68,.25);
-    color: #fff;
-    font-weight: 700;
-    letter-spacing: 2px;
-    cursor: pointer;
-    transition: .3s;
-}
+    #chatHeader h4 {
+        color: #fff;
+        font-size: 18px;
+        font-weight: 900;
+        text-transform: uppercase;
+        text-shadow: 0 0 15px rgba(255,0,0,0.9);
+    }
 
-.play-btn:hover {
-    background: rgba(255,8,68,.45);
-    transform: translateY(-2px);
-}
+    #closeChatBtn {
+        background: rgba(200,0,0,0.8);
+        border: none;
+        color: #fff;
+        font-size: 20px;
+        width: 30px;
+        height: 30px;
+        cursor: pointer;
+                font-weight: 900;
+    }
 
-/* MODAL + CHAT = STEJNÝ GLASS LOOK */
-.modal,
-#chatPanel {
-    backdrop-filter: blur(18px);
-    background: rgba(10,10,15,.85);
-}
+    #chatMessages {
+        flex: 1;
+        overflow-y: auto;
+        padding: 15px;
+        display: flex;
+        flex-direction: column;
+        gap: 10px;
+    }
 
+    .chat-message {
+        padding: 10px 15px;
+        background: rgba(40,40,40,0.8);
+        border-left: 3px solid rgba(200,0,0,0.7);
+        color: #fff;
+        font-size: 14px;
+    }
 
+    .chat-message .chat-user {
+        color: #ff3333;
+        font-weight: 900;
+        margin-right: 8px;
+    }
+
+    .chat-message.admin {
+        border-left-color: rgba(255,150,0,0.9);
+        background: rgba(60,40,20,0.8);
+    }
+
+    .chat-message.admin .chat-user {
+        color: #ff9900;
+    }
+
+    .chat-message.guest {
+        border-left-color: rgba(100,100,200,0.7);
+    }
+
+    .chat-message.guest .chat-user {
+        color: #6699ff;
+    }
+
+    #chatInput {
+        display: flex;
+        gap: 10px;
+        padding: 15px;
+        border-top: 2px solid rgba(200,0,0,0.7);
+    }
+
+    #chatInput input {
+        flex: 1;
+        padding: 12px;
+        border: 2px solid rgba(200,0,0,0.5);
+        background: rgba(0,0,0,0.6);
+        color: #fff;
+    }
+
+    #chatInput button {
+        padding: 12px 20px;
+        border: 2px solid rgba(200,0,0,0.7);
+        background: rgba(200,0,0,0.9);
+        color: #fff;
+        font-weight: 900;
+        cursor: pointer;
+    }
+
+    /* Media Queries */
+    @media (max-width: 768px) {
+        h1 {
+            font-size: 36px;
+            margin: 100px 20px 40px;
+        }
+
+        #gamesContainer {
+            padding: 0 20px 60px;
+            gap: 25px;
+        }
+
+        #adminPanel {
+            width: calc(100% - 40px);
+            right: 20px;
+            top: 100px;
+        }
+
+        #chatPanel {
+            width: 100%;
+            height: 400px;
+        }
+
+        #backBtn {
+            top: 20px;
+            left: 20px;
+            padding: 10px 20px;
+            font-size: 14px;
+        }
+
+        #authButtons {
+            top: 20px;
+            right: 20px;
+            flex-direction: column;
+        }
+
+        #authButtons button {
+            font-size: 12px;
+            padding: 10px 20px;
+        }
+
+        #onlineCounter {
+            font-size: 12px;
+            padding: 6px 12px;
+        }
+
+        .game-card {
+            padding: 10px;
+        }
+
+        .game-title {
+            font-size: 18px;
+            letter-spacing: 1px;
+        }
+
+        .play-btn {
+            font-size: 14px;
+            padding: 12px;
+        }
+    }
+
+    /* For very small devices */
+    @media (max-width: 480px) {
+        h1 {
+            font-size: 28px;
+            margin: 60px 15px 30px;
+        }
+
+        .game-card {
+            padding: 8px;
+        }
+
+        .game-title {
+            font-size: 16px;
+            letter-spacing: 0.5px;
+        }
+
+        .play-btn {
+            font-size: 12px;
+            padding: 10px;
+        }
+
+        #chatPanel {
+            width: 100%;
+            height: 350px;
+        }
+
+        #chatMessages {
+            padding: 10px;
+        }
+
+        #backBtn {
+            font-size: 12px;
+            padding: 8px 18px;
+        }
+
+        #authButtons button {
+            font-size: 10px;
+            padding: 8px 16px;
+        }
+
+        #onlineCounter {
+            font-size: 10px;
+            padding: 5px 10px;
+        }
+    }
 </style>
+
 
 
 </head>
@@ -939,6 +1120,7 @@ window.addEventListener('DOMContentLoaded', async function() {
 
 </body>
 </html>
+
 
 
 
